RESOLVED FIXED22918
Web Inspector crashes if no node is selected when it is launched (Qt port only)
https://bugs.webkit.org/show_bug.cgi?id=22918
Summary Web Inspector crashes if no node is selected when it is launched (Qt port only)
Yael
Reported 2008-12-18 09:42:38 PST
Web Inspector works fine if launched from a context menu. But if it is launched in any other way it crashes.
Attachments
When Web Inspector is launched without an associated node, call show() instead of inspect(). (1.17 KB, patch)
2008-12-18 09:43 PST, Yael
vestbo: review+
Yael
Comment 1 2008-12-18 09:43:53 PST
Created attachment 26121 [details] When Web Inspector is launched without an associated node, call show() instead of inspect().
Tor Arne Vestbø
Comment 2 2008-12-19 00:07:02 PST
Comment on attachment 26121 [details] When Web Inspector is launched without an associated node, call show() instead of inspect(). Good catch! > + if (d->hitTestResult.d) We can probably use isNull() instead of d directly here. I'll land it with that change. Thanks!
Tor Arne Vestbø
Comment 3 2008-12-19 00:20:04 PST
Landed in r39394, added commit message from comment #1 to changelog.
Note You need to log in before you can comment on or make changes to this bug.