2008-12-18  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Tor Arne Vestbø.

        When Web Inspector is launched without an associated node,
        call show() instead of inspect().

        https://bugs.webkit.org/show_bug.cgi?id=22918

git-svn-id: svn://svn.chromium.org/blink/trunk@39394 bbb929c8-8fbe-4397-9dbb-9b2b20218538