third_party/WebKit/WebKit/qt/Api/qwebpage.cpp
@@ -1418,7 +1418,10 @@ void QWebPage::triggerAction(WebAction action, bool checked)
             editor->setBaseWritingDirection(RightToLeftWritingDirection);
             break;
         case InspectElement:
-            d->page->inspectorController()->inspect(d->hitTestResult.d->innerNonSharedNode.get());
+            if (!d->hitTestResult.isNull())
+                d->page->inspectorController()->inspect(d->hitTestResult.d->innerNonSharedNode.get());
+            else
+                d->page->inspectorController()->show();
             break;
         default:
             command = editorCommandForWebActions(action);
